# bitmaps

./: CHANGELOG.md  TODO  abitmap.cabal  bitmaps.cabal
old/: Pixel.hs
src/Codec/String/: Base16.hs  Base64.hs
src/Data/: ABitmap.hs  ABitmap.old.oldddddddddddddddd.old.hs
src/Data/ABitmap/: Internal.hs
src/Data/Bitmap/: .Class.hs.swo  .Types.hs.swo  Array.hs  BMP.hs  Class.hs  Croppable.hs  Data.hs  Foreign.hs  Function.hs  Pixel.hs  Reflectable.hs  Searchable.hs  String.hs  StringRGB24A4VR.hs  StringRGB32.hs  Types.hs  Util.hs
src/Data/Bitmap/Array/: Internal.hs
src/Data/Bitmap/Function/: Internal.hs
src/Data/Bitmap/String/: Internal.hs
src/Data/Bitmap/StringRGB24A4VR/: Internal.hs
src/Data/Bitmap/StringRGB32/: Internal.hs
